# band-slint

./: .gitmodules  Cargo.toml
settings/: settings.dev.toml  settings.prod.toml  settings.stage.toml
src/: main.rs  slint_utils.rs
src/settings/: mod.rs
ui/: app-window.slint  roboto.ttc
