[package]
name = "band-slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["toml"]
#convert-case = ["convert_case"]

[dependencies]
slint = "1.8.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.20.2"
serde = "1.0.210"
serde_derive = "1.0.210"
config = "0.14.0"
toml = { version = "0.8.19", optional = true }
#convert_case = { version = "0.6.0", optional = true }
futures = "0.3.31"
mattermost-api-rust-driver = { path = "mattermost-api-rust-driver" }

[build-dependencies]
slint-build = "1.8.0"
